# delameta

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: cmake-single-platform.yml
app/: CMakeLists.txt  README.html  README.md  a01.cpp  aj-sr04.cpp  debug.ipp  example.cpp  exec.cpp  file_handler.cpp  fs50l.cpp  jwt.cpp  larkin.cpp  main.cpp  modbus_encode.cpp  modbus_rtu.cpp  modbus_tcp.cpp  on_sigint.ipp  options.ipp  pzem.cpp  readme.cpp  serial_handler.cpp  shzk.cpp  udp.cpp  urm15.cpp
cmake/: control.in  delameta.cmake
core/linux/: file.cpp  file_descriptor.cpp  helper.cpp  helper.h  http.cpp  opts.cpp  serial.cpp  socket.cpp  tcp.cpp  tls.cpp  udp.cpp
core/linux/serial/: client.cpp  server.cpp
core/linux/tcp/: client.cpp  server.cpp  ssl.cpp
core/stm32_hal/: can.cpp  ethernet.cpp  file.cpp  file_descriptor.cpp  file_descriptor_can.cpp  file_descriptor_i2c.cpp  file_descriptor_spi.cpp  file_descriptor_uart.cpp  file_descriptor_usb.cpp  helper.cpp  http.cpp  i2c.cpp  serial.cpp  socket.cpp  spi.cpp  tcp.cpp  tls.cpp  uart.cpp  udp.cpp  usb.cpp
core/stm32_hal/serial/: client.cpp  server.cpp
core/stm32_hal/tcp/: client.cpp  server.cpp
core/windows/: file.cpp  helper.cpp  helper.h  opts.cpp  serial.cpp  tcp.cpp  tls.cpp  udp.cpp
include/delameta/: debug.h  endpoint.h  error.h  file.h  file_descriptor.h  json.h  movable.h  opts.h  serial.h  socket.h  stream.h  tcp.h  tls.h  udp.h  url.h  utils.h
include/delameta/file_descriptor/: stream.h
include/delameta/http/: arg.h  chunked.h  client.h  error.h  http.h  request.h  response.h  server.h
include/delameta/modbus/: api.h  client.h  modbus.h  server.h
include/delameta/modbus/rtu/: client.h  server.h
include/delameta/modbus/tcp/: client.h  server.h
include/delameta/serial/: client.h  server.h
include/delameta/socket/: stream.h
include/delameta/tcp/: client.h  server.h
src/: delameta.cpp  delameta.h  endpoint.cpp  error.cpp  file_descriptor.cpp  socket.cpp  stream.cpp  time_helper.ipp  url.cpp
src/file_descriptor/: stream.cpp
src/http/: chunked.cpp  client.cpp  http.cpp  request.cpp  response.cpp  server.cpp
src/modbus/: api.cpp  client.cpp  modbus.cpp  server.cpp
src/modbus/rtu/: client.cpp  server.cpp
src/modbus/tcp/: client.cpp  server.cpp
src/serial/: client.cpp  server.cpp
src/socket/: stream.cpp
src/tcp/: client.cpp  server.cpp
test/: CMakeLists.txt  error.cpp  http.cpp  json.cpp  macro.cpp  main.cpp  modbus.cpp  stream.cpp  url.cpp
